# theme_wallpaper_mgr

./: BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README.zh.md  README_ZH.md  bundle.json  hisysevent.yaml  wallpaper.gni
frameworks/ets/taihe/wallpapermgr/: BUILD.gn
frameworks/innerkitsimpl/wallpaper_manager/: BUILD.gn  libwallpaper_manager.map
frameworks/innerkitsimpl/wallpaper_manager/include/: i_wallpaper_callback.h  i_wallpaper_service.h  iwallpaper_color_change_listener.h  uv_queue.h  wallpaper_color_change_listener.h  wallpaper_color_change_listener_client.h  wallpaper_color_change_listener_stub.h  wallpaper_manager.h  wallpaper_manager_kits.h  wallpaper_service_cb_stub.h  wallpaper_service_proxy.h
frameworks/innerkitsimpl/wallpaper_manager/src/: iwallpaper_color_change_listener.cpp  wallpaper_color_change_listener_client.cpp  wallpaper_color_change_listener_stub.cpp  wallpaper_manager.cpp  wallpaper_manager_kits.cpp  wallpaper_service_cb_stub.cpp  wallpaper_service_proxy.cpp
frameworks/js/napi/: BUILD.gn  call.cpp  call.h  js_error.cpp  js_error.h  napi_wallpaper_ability.cpp  napi_wallpaper_ability.h  native_module.cpp  wallpaper_js_util.cpp  wallpaper_js_util.h
frameworks/js/napi/wallpaper_extension_context/: BUILD.gn  wallpaper_extension_context.js  wallpaper_extension_context_module.cpp
frameworks/js/napi/wallpaperextension/: BUILD.gn  wallpaper_extension.js
frameworks/js/napi/wallpaperextensionability/: BUILD.gn  wallpaper_extension_ability.js  wallpaper_extension_ability_module.cpp
frameworks/kits/extension/: BUILD.gn  libwallpaper_extension.map
interfaces/kits/napi/: BUILD.gn  async_call.cpp  async_call.h  call.cpp  call.h  js_error.cpp  js_error.h  napi_wallpaper_ability.cpp  napi_wallpaper_ability.h  native_module.cpp  wallpaper_js_util.cpp  wallpaper_js_util.h
services/: BUILD.gn  IWallpaperService.idl
services/dfx/hidumper_adapter/: command.cpp  command.h  dump_helper.cpp  dump_helper.h
services/dfx/hisysevent_adapter/: dfx_types.h  fault_reporter.cpp  reporter.h  statistic_reporter.cpp  statistic_reporter.h
services/etc/: BUILD.gn  wallpaper.para  wallpaper.para.dac
services/etc/init/: wallpaperservice.cfg  wallpaperservice.rc
services/include/: ability_connection_stub.h  component_name.h  i_wallpaper_callback.h  i_wallpaper_manager_callback.h  wallpaper_color_change_listener_proxy.h  wallpaper_common_event.h  wallpaper_common_event_manager.h  wallpaper_common_event_subscriber.h  wallpaper_data.h  wallpaper_event_listener_proxy.h  wallpaper_extension_ability_connection.h  wallpaper_extension_ability_death_recipient.h  wallpaper_on_colors_changed_listener.h  wallpaper_service.h  wallpaper_service_cb_proxy.h  wallpaper_service_ipc_interface_code.h  wallpaper_service_stub.h
services/profile/: 3705.json  3705.xml  BUILD.gn
services/src/: ability_connection_stub.cpp  component_name.cpp  wallpaper_color_change_listener_proxy.cpp  wallpaper_common_event.cpp  wallpaper_common_event_manager.cpp  wallpaper_common_event_subscriber.cpp  wallpaper_data.cpp  wallpaper_event_listener_proxy.cpp  wallpaper_extension_ability_connection.cpp  wallpaper_extension_ability_death_recipient.cpp  wallpaper_service.cpp  wallpaper_service_cb_proxy.cpp  wallpaper_service_stub.cpp
services/src/adapter/: accesstoken_adapter.cpp  accesstoken_adapter.h
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/boundarycode_fuzzer/: BUILD.gn  boundarycode_fuzzer.cpp  boundarycode_fuzzer.h
test/fuzztest/getcolors_fuzzer/: BUILD.gn  getcolors_fuzzer.cpp  getcolors_fuzzer.h
test/fuzztest/getcolorsv9_fuzzer/: BUILD.gn  getcolorsv9_fuzzer.cpp  getcolorsv9_fuzzer.h
test/fuzztest/getfile_fuzzer/: BUILD.gn  getfile_fuzzer.cpp
test/fuzztest/getpixelmap_fuzzer/: BUILD.gn  getpixelmap_fuzzer.cpp
test/fuzztest/getpixelmapv9_fuzzer/: BUILD.gn  getpixelmapv9_fuzzer.cpp
test/fuzztest/getwallpaperid_fuzzer/: BUILD.gn  getwallpaperid_fuzzer.cpp
test/fuzztest/ischangepermitted_fuzzer/: BUILD.gn  ischangepermitted_fuzzer.cpp
test/fuzztest/isoperationallowed_fuzzer/: BUILD.gn  isoperationallowed_fuzzer.cpp
test/fuzztest/off_fuzzer/: BUILD.gn  off_fuzzer.cpp
test/fuzztest/on_fuzzer/: BUILD.gn  on_fuzzer.cpp  on_fuzzer.h
test/fuzztest/registercallback_fuzzer/: BUILD.gn  registercallback_fuzzer.cpp
test/fuzztest/resetwallpaper_fuzzer/: BUILD.gn  resetwallpaper_fuzzer.cpp
test/fuzztest/resetwallpaperv9_fuzzer/: BUILD.gn  resetwallpaperv9_fuzzer.cpp  resetwallpaperv9_fuzzer.h
test/fuzztest/sendevent_fuzzer/: BUILD.gn  sendevent_fuzzer.cpp
test/fuzztest/setcustom_fuzzer/: BUILD.gn  setcustom_fuzzer.cpp
test/fuzztest/setvideo_fuzzer/: BUILD.gn  setvideo_fuzzer.cpp
test/fuzztest/setwallpaper_fuzzer/: BUILD.gn  setwallpaper_fuzzer.cpp
test/fuzztest/setwallpaperv9_fuzzer/: BUILD.gn  setwallpaperv9_fuzzer.cpp  setwallpaperv9_fuzzer.h
test/fuzztest/wallpapermanager_fuzzer/: BUILD.gn  wallpaper_manager_fuzzer.cpp  wallpaper_manager_fuzzer.h
test/fuzztest/wallpapermanagerservice_fuzzer/: BUILD.gn  wallpapermanager_service_fuzzer.cpp  wallpapermanager_service_fuzzer.h
test/fuzztest/wallpaperservice_fuzzer/: BUILD.gn  fuzztest_utils.cpp  fuzztest_utils.h  wallpaperservice_fuzzer.cpp
test/fuzztest/wallpaperservicemock_fuzzer/: BUILD.gn  wallpaper_service_mock_fuzzer.cpp  wallpaper_service_mock_fuzzer.h
test/unittest/: wallpaper_cjson_mock_test.cpp  wallpaper_dfx_test.cpp  wallpaper_permission_test.cpp  wallpaper_test.cpp
test/unittest/mock/: permission_utils_mock.cpp  permission_utils_mock.h  wallpaper_cjson_mock.cpp  wallpaper_cjson_mock.h
test/unittest/resource/: ohos_test.xml
utils/: BUILD.gn
utils/dfx/hidumper_adapter/: command.cpp  command.h  dump_helper.cpp  dump_helper.h
utils/dfx/hisysevent_adapter/: dfx_types.h  fault_reporter.cpp  fault_reporter.h  reporter.cpp  statistic_reporter.cpp  statistic_reporter.h
utils/include/: concurrent_map.h  file_deal.h  hilog_wrapper.h  memory_guard.h  uri_permission.h  wallpaper_common.h  wallpaper_manager_common_info.h
utils/src/: file_deal.cpp  memory_guard.cpp  uri_permission.cpp
(+240 files in other folders)
