# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/theme/wallpaper_mgr/wallpaper.gni")
import("//build/test.gni")

## UnitTest wallpaper_test {{{

ohos_unittest("wallpaper_test") {
  resource_config_file =
      "//base/theme/wallpaper_mgr/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_test"
  sources = [ "unittest/wallpaper_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//third_party/googletest/googlemock/include",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/utils/include",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/services/dfx/hidumper_adapter",
    "//base/theme/wallpaper_mgr/services/dfx/hisysevent_adapter",
    "//base/theme/wallpaper_mgr/services/src/adapter",
    "//foundation/graphic/graphic_2d/interfaces/innerkits/wm",
  ]
  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${utils_path}:wallpaper_utils",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager",
    "//base/theme/wallpaper_mgr/services:wallpaper_service",
    "//foundation/multimedia/image_framework:image_framework",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/interfaces/kits/js/common:image",
    "//foundation/window/window_manager/utils:libwmutil",
    "//foundation/window/window_manager/wm:libwm",
    "//third_party/googletest:gmock",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "graphic_standard:surface",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("wallpaper_permission_test") {
  resource_config_file =
      "//base/theme/wallpaper_mgr/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_permission_test"
  sources = [ "unittest/wallpaper_permission_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/utils/include",
    "//foundation/graphic/graphic_2d/interfaces/innerkits/wm",
  ]
  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager",
    "//base/theme/wallpaper_mgr/services:wallpaper_service",
    "//foundation/multimedia/image_framework:image_framework",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/interfaces/kits/js/common:image",
    "//foundation/window/window_manager/utils:libwmutil",
    "//foundation/window/window_manager/wm:libwm",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "graphic_standard:surface",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("wallpaper_dfx_test") {
  module_out_path = "wallpaper_mgr/wallpaper_dfx_test"
  sources = [ "unittest/wallpaper_dfx_test.cpp" ]

  include_dirs = [
    "//third_party/json/include",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/utils/include",
  ]
  deps = [
    "${utils_path}:wallpaper_utils",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager",
    "//base/theme/wallpaper_mgr/services:wallpaper_service",
  ]
  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":wallpaper_dfx_test",
    ":wallpaper_permission_test",
    ":wallpaper_test",
  ]
}
