# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/theme/wallpaper_mgr/wallpaper.gni")
import("//build/test.gni")

## UnitTest wallpaper_test {{{

ohos_unittest("wallpaper_test") {
  testonly = true
  resource_config_file =
      "//base/theme/wallpaper_mgr/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_test"
  sources = [ "unittest/wallpaper_test.cpp" ]

  include_dirs = []
  deps = [
    "${utils_path}:wallpaper_utils",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager_static",
    "//base/theme/wallpaper_mgr/services:wallpaper_service",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "graphic_standard:surface",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "multimedia_image_framework:image",
    "multimedia_image_framework:image_native",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]
}

ohos_unittest("wallpaper_permission_test") {
  testonly = true
  resource_config_file =
      "//base/theme/wallpaper_mgr/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_permission_test"
  sources = [ "unittest/wallpaper_permission_test.cpp" ]

  include_dirs = []
  deps = [
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager_static",
  ]
  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "graphic_standard:surface",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "multimedia_image_framework:image",
    "multimedia_image_framework:image_native",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]
}

ohos_unittest("wallpaper_dfx_test") {
  testonly = true
  module_out_path = "wallpaper_mgr/wallpaper_dfx_test"
  sources = [ "unittest/wallpaper_dfx_test.cpp" ]

  include_dirs = []
  deps = [
    "${utils_path}:wallpaper_utils",
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager_static",
    "//base/theme/wallpaper_mgr/services:wallpaper_service",
  ]
  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":wallpaper_dfx_test",
    ":wallpaper_permission_test",
    ":wallpaper_test",
  ]
}
