# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../wallpaper.gni")

## UnitTest wallpaper_test {{{

ohos_unittest("wallpaper_test") {
  testonly = true
  resource_config_file =
      "${wallpaper_path}/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_test"
  sources = [ "unittest/wallpaper_test.cpp" ]

  include_dirs = [ "${wallpaper_path}/services/include" ]
  deps = [
    "${utils_path}:wallpaper_utils",
    "${wallpaper_path}/frameworks/native:wallpapermanager_static",
    "${wallpaper_path}/services:wallpaper_service",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "image_framework:image",
    "image_framework:image_native",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "player_framework:media_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm",
    "window_manager:libwsutils",
  ]
}

ohos_unittest("wallpaper_permission_test") {
  testonly = true
  resource_config_file =
      "${wallpaper_path}/test/unittest/resource/ohos_test.xml"
  module_out_path = "wallpaper_mgr/wallpaper_permission_test"
  sources = [ "unittest/wallpaper_permission_test.cpp" ]

  include_dirs = []
  deps = [ "${wallpaper_path}/frameworks/native:wallpapermanager_static" ]
  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "image_framework:image",
    "image_framework:image_native",
    "ipc:ipc_single",
    "player_framework:media_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]
}

ohos_unittest("wallpaper_dfx_test") {
  testonly = true
  module_out_path = "wallpaper_mgr/wallpaper_dfx_test"
  sources = [ "unittest/wallpaper_dfx_test.cpp" ]

  include_dirs = []
  deps = [
    "${utils_path}:wallpaper_utils",
    "${wallpaper_path}/frameworks/native:wallpapermanager_static",
    "${wallpaper_path}/services:wallpaper_service",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "player_framework:media_client",
  ]
}

group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":wallpaper_dfx_test",
    ":wallpaper_permission_test",
    ":wallpaper_test",
  ]
}
