# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
ohos_shared_library("wallpaper_utils") {
  if (use_musl) {
    if (use_jemalloc && use_jemalloc_dfx_intf) {
      defines = [ "CONFIG_USE_JEMALLOC_DFX_INTF" ]
    }
  }
  sources = [
    "dfx/hidumper_adapter/command.cpp",
    "dfx/hidumper_adapter/dump_helper.cpp",
    "dfx/hisysevent_adapter/fault_reporter.cpp",
    "dfx/hisysevent_adapter/statistic_reporter.cpp",
    "src/file_deal.cpp",
    "src/memory_guard.cpp",
  ]
  include_dirs = [
    "dfx/hidumper_adapter",
    "dfx/hisysevent_adapter",
    "include",
  ]
  external_deps = [
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
  ]
  subsystem_name = "theme"
  part_name = "wallpaper_mgr"
}
