# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../wallpaper.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "boundarycode_fuzzer:fuzztest",
    "getcolors_fuzzer:fuzztest",
    "getcolorsv9_fuzzer:fuzztest",
    "getfile_fuzzer:fuzztest",
    "getpixelmap_fuzzer:fuzztest",
    "getpixelmapv9_fuzzer:fuzztest",
    "getwallpaperid_fuzzer:fuzztest",
    "ischangepermitted_fuzzer:fuzztest",
    "isoperationallowed_fuzzer:fuzztest",
    "off_fuzzer:fuzztest",
    "on_fuzzer:fuzztest",
    "registercallback_fuzzer:fuzztest",
    "resetwallpaper_fuzzer:fuzztest",
    "resetwallpaperv9_fuzzer:fuzztest",
    "sendevent_fuzzer:fuzztest",
    "setcustom_fuzzer:fuzztest",
    "setvideo_fuzzer:fuzztest",
    "setwallpaper_fuzzer:fuzztest",
    "setwallpaperv9_fuzzer:fuzztest",
    "wallpapermanager_fuzzer:fuzztest",
  ]
}
