# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../wallpaper.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "wallpapermanager_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/boundarycode_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getcolors_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getcolorsv9_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getfile_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getpixelmap_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getpixelmapv9_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/getwallpaperid_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/ischangepermitted_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/isoperationallowed_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/off_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/on_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/registercallback_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/resetwallpaper_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/resetwallpaperv9_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/sendevent_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/setcustom_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/setvideo_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/setwallpaper_fuzzer:fuzztest",
    "wallpaperservice_fuzzer/setwallpaperv9_fuzzer:fuzztest",
  ]
}
