# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/theme/wallpaper_mgr/wallpaper.gni")
import("//build/ohos.gni")

config("wallpaper_manager_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//base/theme/wallpaper_mgr/utils/dfx/hisysevent_adapter",
    "//base/theme/wallpaper_mgr/services/include",
    "//base/theme/wallpaper_mgr/utils/include",
    "//third_party/libuv/include",
  ]
  cflags_cc = []
}

ohos_shared_library("wallpapermanager") {
  sources = [
    "src/uv_queue.cpp",
    "src/wallpaper_color_change_listener_client.cpp",
    "src/wallpaper_color_change_listener_stub.cpp",
    "src/wallpaper_manager.cpp",
    "src/wallpaper_manager_kits.cpp",
    "src/wallpaper_service_cb_stub.cpp",
    "src/wallpaper_service_proxy.cpp",
  ]
  public_configs = [ ":wallpaper_manager_config" ]
  include_dirs = []
  deps = [ "${utils_path}:wallpaper_utils" ]
  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_framework:image_native",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "theme"
  part_name = "wallpaper_mgr"
}

ohos_prebuilt_etc("wallpaperdefault.jpeg") {
  source = "data/wallpaperdefault.jpeg"
  part_name = "wallpaper_mgr"
  subsystem_name = "theme"
}
ohos_prebuilt_etc("wallpaperlockdefault.jpeg") {
  source = "data/wallpaperlockdefault.jpeg"
  part_name = "wallpaper_mgr"
  subsystem_name = "theme"
}
