# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../wallpaper.gni")

ohos_shared_library("wallpaper") {
  include_dirs = [
    "${wallpaper_path}/frameworks/js/napi",
    "${wallpaper_path}/frameworks/native/include",
    "${wallpaper_path}/utils/include",
  ]

  sources = [
    "call.cpp",
    "js_error.cpp",
    "napi_wallpaper_ability.cpp",
    "native_module.cpp",
    "wallpaper_js_util.cpp",
  ]
  deps = [ "${wallpaper_path}/frameworks/native:wallpapermanager" ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:libgraphic_utils",
    "hilog:libhilog",
    "image_framework:image",
    "image_framework:image_native",
    "napi:ace_napi",
    "player_framework:media_client",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    boundary_sanitize = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"

  relative_install_dir = "module"
  subsystem_name = "theme"
  part_name = "wallpaper_mgr"
}
