# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/theme/wallpaper_mgr/wallpaper.gni")
import("//build/ohos.gni")

config("ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/include",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_napi_path}/inner/napi_common",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "APP_LOG_TAG = \"Ability\"",
    "LOG_DOMAIN = 0xD002200",
  ]
}

ohos_shared_library("wallpaperextension") {
  include_dirs = [
    "//base/theme/wallpaper_mgr/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/include",
    "//base/global/i18n/frameworks/intl/include",
  ]

  sources = [
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/src/js_wallpaper_extension.cpp",
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/src/js_wallpaper_extension_context.cpp",
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/src/wallpaper_extension.cpp",
    "//base/theme/wallpaper_mgr/frameworks/kits/extension/src/wallpaper_extension_context.cpp",
  ]

  version_script = "libwallpaper_extension.map"

  configs = [ ":ability_config" ]

  deps = [ "${wallpaper_path}/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_napi_common",
    "napi:ace_napi",
    "window_manager:libwm",
  ]

  subsystem_name = "theme"
  part_name = "wallpaper_mgr"
}

ohos_shared_library("wallpaper_extension_module") {
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-Os",
  ]

  sources = [ "//base/theme/wallpaper_mgr/frameworks/kits/extension/src/wallpaper_extension_module_loader.cpp" ]

  configs = [ ":ability_config" ]

  deps = [ ":wallpaperextension" ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "hiviewdfx_hilog_native:libhilog",
  ]

  relative_install_dir = "extensionability/"
  subsystem_name = "theme"
  part_name = "wallpaper_mgr"
}
